--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="test.js"/>
 
 </head>
-<body>
+<body onload="bodyOnLoad">
 <H1>Statki XD</H1>
 <table border="1">
 	<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
