--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Statki XD</title>
-<script type="text/javascript" src="test.js"/>
+	<script type="text/javascript" src="test.js"></script>
 
 </head>
 <body onload="bodyOnLoad">
